[gd_scene load_steps=4 format=3 uid="uid://brlyktxpwaw4q"]

[ext_resource type="Script" path="res://weapons/Bullet.gd" id="1_cp3av"]
[ext_resource type="Texture2D" uid="uid://bvfgmf7oc6oc7" path="res://assets/Spritesheet/spritesheet_tiles.png" id="2_bl8u4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5nqk"]
size = Vector2(8, 4)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_cp3av")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.928571, 1)
texture = ExtResource("2_bl8u4")
region_enabled = true
region_rect = Rect2(1332, 1076, 12, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t5nqk")

[node name="BulletDestroyTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulletDestroyTimer" to="." method="_on_BulletDestroyTimer_timeout"]
